# Weave

./: .gitignore  README.md  docker-compose.yml  makefile
client/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  ReclaimDemo.tsx  main.tsx  routeTree.gen.ts
client/src/components/AsideNavigation/: AsideNavigation.tsx
client/src/components/AuroraAnimation/: AuroraAnimation.tsx  aurora.css  index.ts
client/src/components/Auth/: Auth.tsx
client/src/components/AuthModal/: AuthModal.tsx
client/src/components/Background/: Background.tsx  DashboardBackground.tsx
client/src/components/Copyright/: Copyright.tsx
client/src/components/Footer/: Footer.tsx
client/src/components/Header/: Header.tsx  HeaderMenu.tsx
client/src/components/Header/components/HeaderMenu/: HeaderMenu.tsx
client/src/components/Header/components/Wallet/: Connected.tsx  Connecting.tsx  SelectWallet.tsx  WalletConnect.tsx
client/src/components/ProofModal/: ProofModal.tsx  index.ts
client/src/components/ProviderCard/: ProviderCard.tsx
client/src/components/SearchInput/: SearchInput.tsx
client/src/components/UnavailableModal/: UnavailableModal.tsx  index.ts
client/src/components/UserStats/: UserStats.tsx
client/src/components/Wallet/: Connected.tsx  SelectWallet.tsx  WalletConnect.tsx
client/src/components/WalletConnectModal/: WalletConnectModal.tsx  index.ts
client/src/config/: api.config.ts  index.ts  providers.config.ts  reclaim.config.ts  ui.config.ts  wallets.ts
client/src/contexts/: auth.ts  chain.ts  index.ts  wallet.ts
client/src/hooks/: useAnimations.ts  useApiQueries.ts  useAsyncExecutor.ts  useCopyToClipboard.ts  useDebounce.ts  useLogout.ts  useScrollDetection.ts  useSignArbitrary.ts  useTokens.ts  useUserMe.ts  useWalletClient.ts
client/src/routes/: 404.tsx  __root.tsx  _authenticated.tsx  _unathenticated.tsx
client/src/routes/_authenticated/dashboard/: index.tsx
client/src/routes/_authenticated/search/: index.tsx
client/src/routes/_unathenticated/: index.tsx
client/src/routes/_unathenticated/about/: index.tsx
client/src/routes/_unathenticated/how/: index.tsx
client/src/services/: auth.service.ts  cookie.service.ts  http.service.ts  proof.service.ts  search.service.ts  user.service.ts
client/src/utils/: claimDataParser.ts  common.ts  faucet.ts  fromUint8ArrayToString.ts  path.ts  provider.ts
server/: .dockerignore  .env.example  .env.prod  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  install-deps.sh  justfile  monitor.sh
server/migrations/2025-02-20-173644_create_account/: down.sql  up.sql
server/src/: config.rs  constants.rs  lib.rs  main.rs  node.rs  operations.rs  proof.rs  prover.rs  router.rs  schema.rs  state.rs  tx.rs
server/src/api/: mod.rs  routes.rs  server.rs
server/src/api/dto/request/: auth_req.rs  mod.rs  proof_req.rs
server/src/api/dto/response/: auth_res.rs  mod.rs  proof_res.rs  user_res.rs
server/src/api/handlers/: auth.rs  health.rs  mod.rs  proof.rs  user.rs
server/src/constants/: mod.rs
server/src/domain/errors/: auth_errors.rs  mod.rs  proof_errors.rs  user_errors.rs
server/src/domain/models/: auth.rs  mod.rs  proof.rs  user.rs
server/src/entities/: account.rs  account_repo.rs  mod.rs  user.rs  user_repo.rs
server/src/handlers/: auth_handler.rs  mod.rs  router.rs
server/src/middleware/: auth.rs
server/src/services/: api.rs  auth.rs  auth_service.rs  jwt.rs  mod.rs  models.rs  node.rs  proof_service.rs  signature_service.rs  token_utils.rs  user_service.rs
server/src/utils/: arbitrary_message.rs  common.rs  jwt.rs  mod.rs
server/tests/: auth.rs
