[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

# webserver
axum = "0.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15"

#reclaim 
reclaim-rust-sdk = "0.1.0"

# celestia stuff
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"

# key management
prism-common = { git = "https://github.com/deltadevsde/prism", package = "prism-common" }
keystore-rs = { git = "https://github.com/deltadevsde/keystore" }

# serde
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"

# concurrency
tokio = { version = "1.40.0", features = ["full", "rt"] }
tokio-util = "0.7"
async-lock = "2.8.0"

# binary stuff
log = "0.4.22"
pretty_env_logger = "0.5.0"
clap = { version = "4.0", features = ["derive"] }

# errors
anyhow = "1.0.89"
thiserror = "2.0.11"
tower-http = { version = "0.3", features = ["cors"] }
http = "0.2"


base64 = "0.20.0"
ecdsa = { version =  "0.14.8", features = ["der", "arithmetic", "digest"] }
k256 = "0.11.6"
secp256k1 = "0.25.0"
tendermint = { version =  "0.28.0", features = ["secp256k1"] }


# quote = "1.0"
