[package]
name = "weave-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
axum = "0.6.0"
dotenv = "0.15"
reclaim-rust-sdk = "0.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full", "rt"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
anyhow = "1.0.89"
thiserror = "2.0.11"
tower-http = { version = "0.3", features = ["cors"] }
http = "0.2"
base64 = "0.20.0"
ecdsa = { version =  "0.14.8", features = ["der", "arithmetic", "digest"] }
k256 = "0.11.6"
tendermint = { version =  "0.28.0", features = ["secp256k1"] }
chrono = "0.4.39"
jsonwebtoken = "9.2"
prism-prover = { git = "https://github.com/deltadevsde/prism", branch = "main", features = ["mock_prover"]}
prism-common = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-tree = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-keys = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-storage = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-da = { git = "https://github.com/deltadevsde/prism", branch = "main" }
keystore-rs = { version = "0.3" }
lazy_static = "1.4.0"
