[package]
name = "weave-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0", features = ["headers"] }
dotenv = "0.15"
reclaim-rust-sdk = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full", "rt"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
anyhow = "1.0.89"
thiserror = "2.0.11"
tower-http = { version = "0.3", features = ["cors"] }
http = "0.2"
base64 = "0.22.0"
ecdsa = { version =  "0.14.8", features = ["der", "arithmetic", "digest"] }
k256 = "0.13.4"
tendermint = { version =  "0.28.0", features = ["secp256k1"] }
chrono = "0.4.39"
jsonwebtoken = "9.2"
prism-prover = { git = "https://github.com/deltadevsde/prism", branch = "main", features = [
    "mock_prover",
]}
prism-storage = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-da = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-client = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-keys = { git = "https://github.com/deltadevsde/prism", branch = "main" }
keystore-rs = { version = "0.3.1" }
headers = "0.3"
async-trait = "0.1"
diesel = { version = "2.1", features = ["mysql"] }
bincode = "1.3.3"
shellexpand = "3.1.0"